Clase 04 Aplicación de Sistema Estudiantes con Spring Boot -> Parte 3

--- a/Java/Clase 2/estudiantes/src/main/resources/application.properties
+++ b/Java/Clase 2/estudiantes/src/main/resources/application.properties
@@ -7,7 +7,7 @@ sping.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Evitar que se cree el esquema nuevamente
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 #Desactivamos el servidor de tomcat
 spring.main.web-application-type=none
