ultimas modificaciones al proyecto

--- a/Java/Clase2,3,4y5/estudiantes/src/main/resources/application.properties
+++ b/Java/Clase2,3,4y5/estudiantes/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Conexion MySQL
-spring.datasource.url=jdbc:mysql://localhost3306/estudiantes
+spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes2024
 spring.datasource.username = root
-spring.datasource.password = cecilia08
+spring.datasource.password = 1234
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 
 #Evitamos que se cree el esquema nuevamente
