--- a/Java/Clase6/tienda_libros/src/main/resources/application.properties
+++ b/Java/Clase6/tienda_libros/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=tienda_libros
 #Conexion a MySQL 
 spring.datasource.url=jdbc:mysql://localhost:3306/tienda_libros_db?createDatabaseINotExist=true
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=1234
 srping.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Crear la base de datos en caso de ser necesario
