--- a/JavaScript/PERN-Stack/package.json
+++ b/JavaScript/PERN-Stack/package.json
@@ -1,9 +1,8 @@
 {
   "name": "pern-stack",
   "version": "1.0.0",
-  "description": "",
   "main": "src/index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon .",
     "start": "node ."
@@ -12,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.21.0",
@@ -25,5 +25,6 @@
   "devDependencies": {
     "eslint": "^9.10.0",
     "nodemon": "^3.1.5"
-  }
+  },
+  "description": ""
 }
