preparación para produccion

--- a/JavaScript/PERN-Stack/package.json
+++ b/JavaScript/PERN-Stack/package.json
@@ -1,14 +1,14 @@
 {
   "name": "pern-stack",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "backend/index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon .",
     "start": "node ."
   },
   "keywords": [],
-  "author": "",
+  "author": "BugBusters",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
